--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Hide And Show Password</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <script
+      src="https://kit.fontawesome.com/178036abda.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Hide And Show Password</title>
+  </head>
+  <body>
+    <div class="box">
+      <input type="password" placeholder="password" />
+      <i class="fa-solid fa-eye-slash" onclick="show()"></i>
+    </div>
+
+    <script src="main.js"></script>
+  </body>
 </html>
