--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Hide And Show Password</title>
   </head>
   <body>
+    <div class="sund"><i class="fa-solid fa-sun fa-4x"></i></div>
     <div class="box">
       <input type="password" placeholder="password" />
       <i class="fa-solid fa-eye-slash" onclick="show()"></i>
